fix(tabstrip): remove z-index from tabstrip-items and tabstrip-content

--- a/packages/default/scss/tabstrip/_layout.scss
+++ b/packages/default/scss/tabstrip/_layout.scss
@@ -35,7 +35,6 @@
         border-style: solid;
         border-color: inherit;
         position: relative;
-        z-index: 2;
     }
 
     .k-tabstrip-items {
@@ -97,7 +96,6 @@
         overflow: auto;
         flex: 1 1 auto;
         position: relative;
-        z-index: 1;
 
         &.k-active {
             display: block;
@@ -297,11 +295,12 @@
                 border-style: solid;
                 display: none;
                 position: absolute;
-                z-index: 0;
+                z-index: 2;
                 top: 0;
                 right: 0;
                 bottom: 0;
                 left: 0;
+                pointer-events: none;
 
                 // Variants
                 .k-tabstrip-top > & {
